# LazyRef

./: CMakeLists.txt  README.md
include/: Drawable.h  Image.h  LazyMath.h  LazyWindow.h  LazyWindowProperties.h  Node.h  NodeController.h  SelectionArea.h  Vector.h
include/components/: Rect.h
src/: Drawable.cpp  Image.cpp  LazyMath.cpp  LazyWindow.cpp  LazyWindowProperties.cpp  Node.cpp  NodeController.cpp  SelectionArea.cpp  main.cpp
src/components/: Rect.cpp
